Added message action and queries for timelines. Deleted message folder and file
