# social_graph_service/src/config/swaggerDoc.yaml
@@ -268,3 +268,30 @@ paths:
           description: No message found
         '500':
           description: Internal server error
+
+  /messages/followedProfile?username:
+    get:
+      tags:
+        - messages
+      summary: Get messages from a specific profile I follow
+      description: >-
+        through the auth header, the user object will be submitted and the 
+        last 25 messages of a specific profile the user follows will be returned
+      security:
+        - authentication: []
+      parameters:
+        - in: query
+          name: username
+          schema:
+            type: string
+            example: 'Sepp'
+          description: The profile of interest.
+      responses:
+        '200':
+          description: A list of messages
+          schema:
+            $ref: '#/definitions/Message'
+        '404':
+          description: No message found
+        '500':
+          description: Internal server error
